testdata/errors/import_cycle/main.spy
import a

print(a.f())
